# Octanis1-ROS

./: .gitignore  .gitmodules  README.md  olimex_compile_kernel_on_ubuntu.md
catkin_ws/: .test.t.swp  Octanis1.gv  README  README.md
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/include/pid/: PidConfig.h
catkin_ws/devel/include/polled_camera/: GetPolledImage.h  GetPolledImageRequest.h  GetPolledImageResponse.h
catkin_ws/devel/include/robot_localization/: SetPoseRequest.h
catkin_ws/src/: README.md  state_publisher.cpp  state_subscriber.cpp
catkin_ws/src/attitude_mainboard/: CMakeLists.txt  package.xml
catkin_ws/src/attitude_mainboard/src/: attitude_mainboard_publisher.cpp
catkin_ws/src/lidar/: CMakeLists.txt  README.txt  package.xml  script-run.sh  script-run2.sh
catkin_ws/src/lidar/launch/: laserAssembler.launch  lidar.launch  pointCloudAssembler.launch
catkin_ws/src/lidar/src/: assemblecloud.cpp  point2cloud.cpp
catkin_ws/src/lidar_motor_controller/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/lidar_motor_controller/launch/: init_lidar_rotation.launch
catkin_ws/src/lidar_motor_controller/script/: lidar_i2c_control.py  rpms2volts.py
catkin_ws/src/modelisation_rviz/: README.md
catkin_ws/src/modelisation_rviz/urdf/: octanis1.urdf
catkin_ws/src/node_communication/: package.xml
catkin_ws/src/node_communication/scripts/: listener.py  talker.py
catkin_ws/src/octanis1_description/: CMakeLists.txt  README.md
catkin_ws/src/octanis1_description/launch/: auto_mission.launch  description.launch  ekf_state.launch  lidar_control.launch  mavlink.launch  mavros.launch  shutdown.launch
catkin_ws/src/octanis1_description/params/: imu_bosch.yaml  mavros_config.yaml  robot_localization_ekf.yaml  robot_localization_ekf_gps.yaml  xv11_lidar.yaml
catkin_ws/src/octanis1_description/urdf/: octanis1.urdf  octanis1.xacro
catkin_ws/src/octomap_server/: README.txt
catkin_ws/src/octomap_server/launch/: octomap_mapping.launch
catkin_ws/src/octomap_server/src/: OctomapServer.cpp
catkin_ws/src/octovis/: package.xml
catkin_ws/src/octovis/debian/: changelog  control  rules
catkin_ws/src/pid_lidar/: CMakeLists.txt  package.xml
catkin_ws/src/pid_lidar/config/: pid_diags.yaml
catkin_ws/src/pid_lidar/include/pid/: PidConfig.h  controller_lidar.h
catkin_ws/src/pid_lidar/launch/: launch_pid_lidar.launch  test_rpm.launch
catkin_ws/src/pid_lidar/script/: rpms2volts.py
catkin_ws/src/pid_lidar/src/: controller_lidar.cpp  setpoint_node_lidar.cpp
catkin_ws/src/point_cloud_converter/: CMakeLists.txt  package.xml
catkin_ws/src/point_cloud_converter/src/: converter.cpp
catkin_ws/src/recording/launch/: bag.launch
catkin_ws/src/recording/src/: record.cpp
catkin_ws/src/shutdown_node/script/: shutdown.py  shutdown_old.py
catkin_ws/src/usb_cam-develop/launch/: usb_cam-test.launch  usb_cam_mono_raw.launch  usb_cam_mono_rect.launch  usb_cam_stereo.launch  usb_cam_stereo_raw.launch
catkin_ws_mission/src/: README.md
catkin_ws_mission/src/attitude_mainboard/src/: attitude_mainboard_publisher.cpp
catkin_ws_mission/src/gps_cog/: package.xml
catkin_ws_mission/src/gps_cog/src/: gps_cog.cpp
catkin_ws_mission/src/lidar/src/: periodic_snapshotter.cpp
catkin_ws_mission/src/lidar_motor_controller/: package.xml
catkin_ws_mission/src/lidar_motor_controller/script/: lidar_i2c_control.py  rpms2volts.py
catkin_ws_mission/src/modelisation_rviz/launch/: gazebo.launch
catkin_ws_mission/src/node_communication/: CMakeLists.txt
catkin_ws_mission/src/octanis1_description/: package.xml
catkin_ws_mission/src/octanis1_description/launch/: .ekf_state.launch.swp  attitude_publisher.launch  auto_mission.launch  bosch_imu_driver.launch  camera.launch  description.launch  ekf_state.launch  ekf_state.launch.save  ekf_state_test.launch  lidar_control.launch  octomap.launch  record.launch  rosbridge.launch  rtimulib_ros.launch  xv11_lidar_driver.launch
catkin_ws_mission/src/octanis1_description/params/: RTIMULib.ini  imu_bosch.yaml  mavros_config.yaml  navsat_transform.yaml  record.yaml  robot_localization.yaml  robot_localization_ekf.yaml  robot_localization_ekf_OLD.yaml  robot_localization_ekf_gps_OLD.yaml  robot_localization_map.yaml  robot_localization_odom.yaml
catkin_ws_mission/src/octanis1_description/urdf/: octanis1.urdf  octanis1.xacro
catkin_ws_mission/src/octovis/debian/: copyright
catkin_ws_mission/src/pid_lidar/: CMakeLists.txt  README.md
catkin_ws_mission/src/pid_lidar/launch/: launch_pid_lidar.launch
catkin_ws_mission/src/pid_lidar/src/: controller_lidar.cpp
catkin_ws_mission/src/point_cloud_converter/: README.txt
catkin_ws_mission/src/recording/: package.xml
catkin_ws_mission/src/recording/launch/: bag.launch
catkin_ws_mission/src/recording/src/: record.cpp
catkin_ws_mission/src/remaining_memory/: CMakeLists.txt  package.xml
catkin_ws_mission/src/remaining_memory/src/: remaining_memory_publisher.cpp
catkin_ws_mission/src/shutdown_node/: package.xml
catkin_ws_mission/src/usb_cam-develop/launch/: usb_cam_stereo.launch
catkin_ws_post_mission/gps_cog/: CMakeLists.txt
catkin_ws_post_mission/recording/: CMakeLists.txt
catkin_ws_post_mission/recording/launch/: bag.launch
catkin_ws_post_mission/remaining_memory/: CMakeLists.txt  package.xml
catkin_ws_post_mission/remaining_memory/script/: remaining_memory.py
catkin_ws_post_mission/src/lidar/: shadow_filter.yaml
catkin_ws_post_mission/src/node_communication/: README.md
catkin_ws_post_mission/src/octomap_server/: CMakeLists.txt
scripts/: a20-cputemp-munin  a20-current-munin  a20-voltage-munin  envvars  install.sh  ros-system-daemon.conf  rosctl  rostopic-munin  shutdown-pin-poller-monit  shutdown-pin-poller.py  start_shutdown-pin-poller.sh
shutdown_node/: CMakeLists.txt
shutdown_node/script/: shutdown.py
urdf_modelisation_octanis/: README.md  state_publisher.cpp  state_subscriber.cpp
urdf_modelisation_octanis/urdf/: octanis1.urdf
(+40 files in other folders)
