<?xml version="1.0"?>
<package>
  <name>remaining_memory</name>
  <version>0.0.0</version>
  <description>The remaining_memory package</description>

  <maintainer email="joseph.lefevre@insa-rouen.fr">jajoe </maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_depend>mavros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_bullet</run_depend>
  <run_depend>mavros</run_depend>
</package>
