<?xml version="1.0"?>
<package>
  <name>pid</name>
  <version>0.0.15</version>
  <description>Launch a PID control node.</description>

  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <license>BSD</license>

 <url type="website">http://wiki.ros.org/pid</url>

 <author email="andyz@utexas.edu">Andy Zelenak</author>
 <author>Paul Bouchier</author>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>diagnostic_updater</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
